# rlvr-dafnybench

./: .dockerignore  .env.example  .gitignore  Makefile  docker-compose.dev.yml  package-lock.json  pyproject.toml  readme.md
.devcontainer/: devcontainer.json  docker-compose.yml
docker/: Dockerfile
docs/: dev.readme.md  task_breakdown.md
grpo_zero/: dafny_file.py  reward.py  verification_task.py
playground/dafny_examples/: clean_examples.py  extract_example.py
playground/dafny_examples/example_005/: annotated_005  annotated_005.cs  annotated_005.csproj  annotated_005.deps.json
scripts/: dafny_utils.py  evaluate_model.py  generate_writer.py  get_data.py  reward.py  train_model.py  train_writer.py
src/: annotation_patch.py  clean_dafny.py  dafny_file.py  data_types.py  diff_merger.py  get_data.py  grpo.py  grpo_refactored.py  grpo_zero.py  memory_adam.py  memory_efficient_optimizer.py  model.py  plan.md  reward.py  test_grpo_basic.py  trainer.py  verification_task.py  writer_pipeline.py
src/rlvr_dafnybench/: architecture.py  evaluation.py  training.py  utils.py  verifier.py
tests/: test_annotation_patch.py  test_grpo_trainer.py  test_grpo_zero.py  test_writer_pipeline.py  test_writer_pipeline_prereqs.py
