[project]
name = "rlvr-dafnybench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    "polars>=1.35.2",
    "pytest>=8.4.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "trl>=0.24.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
